--- a/projetomvc/src/main/resources/templates/data.html
+++ b/projetomvc/src/main/resources/templates/data.html
@@ -11,6 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <h1>Que dia é hoje? Que horas são?</h1>
-        <p><strong>Data e hora atuais:</strong><span id="spnDataHora" th:text="${dataHora}">dd/mm/aaaa hh:mms</span></p>
+        <p><strong>Hoje é dia:</strong><span id="spnData" th:text="${data}">dd/mm/aaaa hh:mms</span></p>
+        <p><strong>A hora certa é:</strong><span id="spnHora" th:text="${hora}"></span></p>
     </body>
 </html>
