estudando mais afundo Thymeleaf

--- a/projetomvc/src/main/resources/templates/cadastro.html
+++ b/projetomvc/src/main/resources/templates/cadastro.html
@@ -10,7 +10,7 @@
             <p>Nome: <input type="text" th:field="*{nome}"/></p>
             <p>Sobrenome: <input type="text" th:field="*{sobrenome}" /></p>
             <p>Idade: <input type="text" th:field="*{idade}" /></p>
-            <p><input type="sumit" value="Cadastrar"/></p>
+            <p><input type="submit" value="Cadastrar"/></p>
         </form>
     </body>
 </html>
