--- a/exemplothymeleaf/src/main/resources/templates/lista-tarefas.html
+++ b/exemplothymeleaf/src/main/resources/templates/lista-tarefas.html
@@ -19,7 +19,13 @@
                 <tr th:each="tarefa : ${tarefas}">
                     <td th:text="${tarefa.id}"></td>
                     <td th:text="${tarefa.descricao}"></td>    
-                    <td th:text="${tarefa.completa}"></td>
+                    <td>
+                        <!<!-- Usamos if para verificar se o valor é verdadeiro -->
+                        <span th:if="${tarefa.completa}">Concluída</span>
+                        <!<!-- Usamos unless para verificar se o valor é falso -->
+                        <span th:unless="{tarefa.completa}">Pendente</span>
+                    </td>
+                    
                 </tr>
             </tbody>
         </table>
