criando formulário com Thymeleaf

--- a/exemplothymeleaf/src/main/resources/templates/exibir-tarefa.html
+++ b/exemplothymeleaf/src/main/resources/templates/exibir-tarefa.html
@@ -9,6 +9,7 @@
         <p>Bem-vindo, <span th:text="${nome}"/>!</p>
         <br/>
         <p>ID:<span th:text="${tarefa.id}"/> </p>
+        <p>Descrição: <span th:text="${tarefa.descricao}"/></p>
         <p>Completa: <span th:text="${tarefa.completa}"/></p>
     </body>
 </html>
