navegaçao entre páginas e criando pastas de recursos estáticos

--- a/exemplothymeleaf/src/main/resources/templates/exibir-tarefa.html
+++ b/exemplothymeleaf/src/main/resources/templates/exibir-tarefa.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
     <body>
+        <header th:insert="navbar.html :: nav"></header>
         <h1>Tarefa</h1>
         <p>Bem-vindo, <span th:text="${nome}"/>!</p>
         <br/>
