--- a/exemplothymeleaf/src/main/resources/templates/lista-tarefas.html
+++ b/exemplothymeleaf/src/main/resources/templates/lista-tarefas.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
     <body>
+        <header th:insert="navbar.html :: nav"></header>
         <h1>Lista de tarefas</h1>
         <p>Essas são todas as suas tarefas:</p>
         <table>
