--- a/exemplothymeleaf/src/main/resources/templates/lista-tarefas.html
+++ b/exemplothymeleaf/src/main/resources/templates/lista-tarefas.html
@@ -3,6 +3,7 @@
     <head>
         <title>Lista de tarefas</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <<link rel="stylesheet" th:href="@{/css/style.css}"/>
     </head>
     <body>
         <header th:insert="navbar.html :: nav"></header>
@@ -22,9 +23,9 @@
                     <td th:text="${tarefa.descricao}"></td>    
                     <td>
                         <!<!-- Usamos if para verificar se o valor é verdadeiro -->
-                        <span th:if="${tarefa.completa}">Concluída</span>
+                        <span th:if="${tarefa.completa}" class="tarefa-concluida">Concluída</span>
                         <!<!-- Usamos unless para verificar se o valor é falso -->
-                        <span th:unless="${tarefa.completa}">Pendente</span>
+                        <span th:unless="${tarefa.completa}" class="tarefa-pendente">Pendente</span>
                     </td>
                     
                 </tr>
