--- a/exemplothymeleaf/src/main/resources/templates/cadastro.html
+++ b/exemplothymeleaf/src/main/resources/templates/cadastro.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
     <body>
-        <header th:insert="navbar.html :: nav"></header>
+        <header th:insert="navbar.html"></header>
         <h1>Cadastro de Tarefas</h1>
         <form th:action="@{/cadastro}" method="POST">
             <div>
