--- a/exemplothymeleaf/src/main/resources/templates/navbar.html
+++ b/exemplothymeleaf/src/main/resources/templates/navbar.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
     <body>
+        <div class="banner"></div>
         <nav>
             <a th:href="@{/lista-tarefas}">Lista de tarefas</a>
             <a th:href="@{/cadastro}">Cadastro</a>
