criando API Restful

--- a/exemplothymeleaf/src/main/resources/templates/lista-tarefas.html
+++ b/exemplothymeleaf/src/main/resources/templates/lista-tarefas.html
@@ -2,9 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>Lista de tarefas</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <!-- CSS do Bootstrap -->
-        <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
         <!-- CSS próprio -->
         <link rel="stylesheet" th:href="@{/css/style.css}"/>
     </head>
